# ARVIS-LookMind

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  FEATURES.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  REVIEW.txt  alembic.ini  chat.go  commitConvetion.txt  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt  test_commands.txt
Functions/: func.go  log.txt
api/: main.py
app/: main.py
app/api/routes/: health.py  proxy.py
app/core/: config.py
app/db/: database.py  models.py
chan/: chan.go
cmd/arvis/: main.go
cmd/arvis/commands/: migrate.go  root.go  server.go  test.go
conc-maze/: main.go
concurrency/: main.go
config/: settings.py
ctx_chan/: main.go
ctxcancellation/: ctxcancellation.go
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: AnomaliesTable.tsx  RequestsTable.tsx  StatsBar.tsx
dashboard/src/types/: index.ts
database/: models.py  schemas.py
docs/: HISTORY.md  vision.md
docs/api/: API_REFERENCE.md
docs/architecture/: OVERVIEW.md
examples/: README.md  autogen_integration.py  langchain_integration.py
httpstreams/: httpstreams.go
internal/api/: middleware.go  router.go
internal/api/handlers/: anomalies.go  requests.go
internal/config/: config.go  config_test.go
internal/detector/: rules.go  rules_test.go
internal/proxy/: forwarder.go  middleware.go  proxy.go
internal/store/: anomalies.go  anomalies_test.go  db.go  request_test.go  requests.go
io_reader_writer/: main.go
json/: json.go
jsondecoder/: decoder.go
learn/: main.go
learn-proxy/: main.go  proxy.go  proxyv1.go
learning-Go/: Datatypes.go  arrays.go  constants.go  helloworld  helloworld.go  main.go  output.go  slices.go  variables.go
mem/: mem.go
migrations/: 000002_create_anomalies.up.sql  001_create_requests.sql
mutexes/: mut.go
mutexes./: mut.go
proxyv1/: main.go
scripts/: seed.go  setup.sh
server-r/: backend.go
src/ai_control/: __init__.py
tests/: conftest.py
tests/unit/: test_control_layer.py
types_in_go/: binding.go  main.go
utils/ctx/: ctx.go  ctxv1.go
worker_pools/: work.go
(+6 files in other folders)
